--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -5,12 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/wallpaper"
-    tools:context=".activities.ProfileEditActivity">
+    tools:context=".activities.ForgotPasswordActivity">
 
     <RelativeLayout
         android:id="@+id/toolbarRl"
         android:layout_width="match_parent"
-        android:layout_height="250dp">
+        android:layout_height="270dp">
         <ImageButton
             android:id="@+id/backBtn"
             android:layout_width="wrap_content"
@@ -20,29 +20,39 @@
             android:layout_margin="10dp"
             android:padding="5dp"/>
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/profileIv"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+        <ImageView
+            android:id="@+id/iconIv"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="80dp"
-            android:background="@color/gray_db"
-            android:src="@drawable/ic_person_g"
-            app:shapeAppearance="@style/styleRounderCornersImage" />
+            android:layout_marginTop="70dp"
+            android:src="@drawable/logo"/>
 
         <TextView
+            android:id="@+id/label1Tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/profileIv"
+            android:layout_below="@+id/iconIv"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
             android:text="Abandon all hope, ye who enter here"
             android:textColor="@color/white"
             android:fontFamily="sans-serif-condensed"
-            android:textSize="16sp"/>
+            android:textSize="20dp"/>
 
+        <TextView
+            android:id="@+id/label2Tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/label1Tv"
+            android:layout_centerHorizontal="true"
+            android:text="Enter email to reset password"
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            android:textSize="14sp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"/>
     </RelativeLayout>
-
+    
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -50,34 +60,34 @@
         android:layout_marginEnd="30dp"
         android:layout_marginTop="250dp">
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/nameTil"
+            android:id="@+id/emailTil"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:hintEnabled="false">
             <EditText
-                android:id="@+id/nameEt"
+                android:id="@+id/emailEt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/shape_edittext01"
-                android:drawableStart="@drawable/ic_person_g"
+                android:drawableStart="@drawable/ic_email_g"
                 android:drawablePadding="10dp"
-                android:inputType="textPersonName|textCapWords"
-                android:hint="Name"
-                android:padding="15dp"
-                android:textColor="@color/white"
-                android:textColorHint="@color/white"/>
-
+                android:padding="10dp"
+                android:hint="Email"
+                android:textColorHint="@color/white"
+                android:textColor="@color/white"/>
 
         </com.google.android.material.textfield.TextInputLayout>
-        
+
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/updateBtn"
+            android:id="@+id/submitBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/nameTil"
-            android:text="Update"
+            android:layout_below="@+id/emailTil"
+            android:layout_marginTop="10dp"
+            android:text="Submit"
             android:textColor="@color/white"
-            android:background="@drawable/shape_button01"
-            android:layout_marginTop="20dp"/>
+            android:background="@drawable/shape_button01"/>
+
     </RelativeLayout>
+
 </RelativeLayout>
