--- a/app/src/main/res/layout/activity_pdf_detail.xml
+++ b/app/src/main/res/layout/activity_pdf_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/wallpaper"
-    tools:context=".activities.admin.PdfDetailActivity">
+    tools:context=".activities.PdfDetailActivity">
     
     <RelativeLayout
         android:id="@+id/toolbarRl"
@@ -31,7 +31,7 @@
             android:textColor="@color/white"/>
     </RelativeLayout>
     
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_above="@id/readBookBtn"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -203,33 +203,46 @@
                 android:layout_marginTop="5dp"
                 android:text="Book description"
                 android:textColor="@color/white"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_marginTop="10dp"
+                android:background="@color/gray_db"/>
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/commentsLabelTv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-condensed"
+                    android:padding="5dp"
+                    android:text="Comment"
+                    android:textColor="@color/white"
+                    android:textSize="16dp"/>
+
+                <ImageButton
+                    android:id="@+id/addCommentBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:background="@drawable/shape_edittext01"
+                    android:padding="5dp"
+                    android:src="@drawable/ic_comment_r"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/commentsRv"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/gray_db"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:listitem="@layout/row_comment"
+                    android:layout_below="@+id/addCommentBtn"/>
+            </RelativeLayout>
         </LinearLayout>
-    </ScrollView>
-
-<!--    <LinearLayout-->
-<!--        android:id="@+id/bookOptionsLl"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:orientation="horizontal"-->
-<!--        android:layout_alignParentBottom="true">-->
-<!--        <androidx.appcompat.widget.AppCompatButton-->
-<!--            android:id="@+id/readBookBtn"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="Read"-->
-<!--            android:layout_weight="1"-->
-<!--            android:textColor="@color/white"-->
-<!--            android:background="@drawable/shape_button01"/>-->
-
-<!--        <androidx.appcompat.widget.AppCompatButton-->
-<!--            android:id="@+id/dowloadBookBtn"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="Dowload"-->
-<!--            android:layout_weight="1"-->
-<!--            android:textColor="@color/white"-->
-<!--            android:background="@drawable/shape_button01"/>-->
-<!--    </LinearLayout>-->
+    </androidx.core.widget.NestedScrollView>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/favoriteBookBtn"
